--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "scifest-map-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "lint": "eslint --ext .ts,.vue .",
+    "lint:fix": "eslint --fix --ext .ts,.vue .",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
-    "nuxt": "^3.16.0",
+    "nuxt": "^3.16.2",
     "vue": "^3.4.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^4.11.0",
+    "@nuxt/eslint": "^1.3.0",
+    "eslint": "^9.23.0"
   }
 }
