--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "canvas-confetti": "^1.9.3",
     "nuxt": "^3.16.2",
     "vue": "^3.4.13",
     "vue-router": "^4.5.0"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
     "@nuxt/eslint": "^1.3.0",
+    "@types/canvas-confetti": "^1.9.0",
     "eslint": "^9.23.0"
   }
 }
